// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correct filesystem tree should build text from structure - depth 0 1`] = `"/Users/ostkost/Projects/otus-nodejs/homework/lesson_1/part_2/__fixtures__/app"`;

exports[`Renders correct filesystem tree should build text from structure - depth 2 1`] = `
"/Users/ostkost/Projects/otus-nodejs/homework/lesson_1/part_2/__fixtures__/app├── dir1 (3)
│   ├── dir11
│   ├── dir12
│   └── file1.txt
├── dir2 (2)
│   ├── dir21
│   └── dir22
└── dir3 (1)
└── dir31
"
`;

exports[`Renders correct filesystem tree should build text from structure - depth 3 1`] = `
"/Users/ostkost/Projects/otus-nodejs/homework/lesson_1/part_2/__fixtures__/app├── dir1 (3)
│   ├── dir11 (2)
│   │   ├── file111.txt
│   │   └── file112.txt
│   ├── dir12 (0)
│   └── file1.txt
├── dir2 (2)
│   ├── dir21 (1)
│   │   └── file211.txt
│   └── dir22 (1)
│       └── file221.txt
└── dir3 (1)
└── dir31 (0)
"
`;

exports[`Renders correct filesystem tree should return dir structure with 1 depth 1`] = `
[
  {
    "children": null,
    "isDirectory": true,
    "name": "dir1",
  },
  {
    "children": null,
    "isDirectory": true,
    "name": "dir2",
  },
  {
    "children": null,
    "isDirectory": true,
    "name": "dir3",
  },
]
`;

exports[`Renders correct filesystem tree should return dir structure with 2 depth 1`] = `
[
  {
    "children": [
      {
        "children": null,
        "isDirectory": true,
        "name": "dir11",
      },
      {
        "children": null,
        "isDirectory": true,
        "name": "dir12",
      },
      {
        "children": null,
        "isDirectory": false,
        "name": "file1.txt",
      },
    ],
    "isDirectory": true,
    "name": "dir1",
  },
  {
    "children": [
      {
        "children": null,
        "isDirectory": true,
        "name": "dir21",
      },
      {
        "children": null,
        "isDirectory": true,
        "name": "dir22",
      },
    ],
    "isDirectory": true,
    "name": "dir2",
  },
  {
    "children": [
      {
        "children": null,
        "isDirectory": true,
        "name": "dir31",
      },
    ],
    "isDirectory": true,
    "name": "dir3",
  },
]
`;

exports[`Renders correct filesystem tree should return dir structure with depth 3 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": null,
            "isDirectory": false,
            "name": "file111.txt",
          },
          {
            "children": null,
            "isDirectory": false,
            "name": "file112.txt",
          },
        ],
        "isDirectory": true,
        "name": "dir11",
      },
      {
        "children": [],
        "isDirectory": true,
        "name": "dir12",
      },
      {
        "children": null,
        "isDirectory": false,
        "name": "file1.txt",
      },
    ],
    "isDirectory": true,
    "name": "dir1",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": null,
            "isDirectory": false,
            "name": "file211.txt",
          },
        ],
        "isDirectory": true,
        "name": "dir21",
      },
      {
        "children": [
          {
            "children": null,
            "isDirectory": false,
            "name": "file221.txt",
          },
        ],
        "isDirectory": true,
        "name": "dir22",
      },
    ],
    "isDirectory": true,
    "name": "dir2",
  },
  {
    "children": [
      {
        "children": [],
        "isDirectory": true,
        "name": "dir31",
      },
    ],
    "isDirectory": true,
    "name": "dir3",
  },
]
`;
